Add lendout activity

--- a/SampleManagement2/AndroidManifest.xml
+++ b/SampleManagement2/AndroidManifest.xml
@@ -30,7 +30,8 @@
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
         <activity android:name=".activity.ReturnActivity"></activity>
-                  <activity android:name=".activity.Sign"></activity>
+                  <activity android:name=".activity.LendOutActivity"></activity>
+        <activity android:name=".activity.Sign"></activity>
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
