--- a/SampleManagement2/AndroidManifest.xml
+++ b/SampleManagement2/AndroidManifest.xml
@@ -24,6 +24,11 @@
         </activity>
 
         <activity
+            android:name="com.lge.samplemanagement2.manage.ManageActivity"
+            android:label="@string/app_name2" >
+        </activity>
+        
+        <activity
             android:name=".activity.MipcaActivityCapture"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
