--- a/SampleManagement2/AndroidManifest.xml
+++ b/SampleManagement2/AndroidManifest.xml
@@ -22,27 +22,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.lge.samplemanagement2.manage.ManageActivity"
             android:label="@string/app_name2" >
         </activity>
-        
         <activity
             android:name=".activity.MipcaActivityCapture"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
-        <activity android:name=".activity.ReturnActivity"></activity>
-                  <activity android:name=".activity.LendOutActivity"></activity>
-        <activity android:name=".activity.Sign"></activity>
+        <activity android:name=".activity.ReturnActivity" >
+        </activity>
+        <activity android:name=".activity.LendOutActivity" >
+        </activity>
+        <activity android:name=".activity.Sign" >
+        </activity>
+        <activity android:name=".activity.FileExplorerActivity" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
