--- a/SampleManagement2/AndroidManifest.xml
+++ b/SampleManagement2/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity android:name=".activity.ReturnActivity" >
         </activity>
-        <activity android:name=".activity.LendOutActivity" >
+        <activity android:name=".activity.LendOutActivity"             android:configChanges="orientation|screenSize|keyboardHidden" >
         </activity>
         <activity android:name=".activity.Sign"
            android:screenOrientation="portrait"> 
